Banner part done

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
       .green {
         color: #4caf4f;
       }
+      .silver {
+        background-color: #f5f7fa;
+      }
+      .p-color {
+        color: #717171;
+      }
     </style>
   </head>
   <body class="inter">
@@ -72,6 +78,43 @@
           </div>
         </div>
       </nav>
+
+      <!-- Banner -->
+      <section class="silver">
+        <!-- Parent Div -->
+        <div
+          class="max-w-screen-xl mx-auto flex justify-between items-center py-16"
+        >
+          <!-- Text Div -->
+          <div>
+            <h1 class="font-semibold text-[2.8125rem] leading-[3.3125rem] mt-3">
+              <span class="d_grey">Lessons and insights</span><br />
+              <span class="green">from 8 years</span>
+            </h1>
+            <p class="mb-6 p-color">
+              Where to grow your business as a photographer: site or social
+              media?
+            </p>
+            <button
+              class="bg-[#4caf4f] hover:bg-[#348b35] text-white py-4 px-9 rounded-[3px] font-medium"
+            >
+              Register
+            </button>
+          </div>
+
+          <!-- Image Div -->
+          <div>
+            <img src="images/banner-logo.png" alt="" />
+          </div>
+        </div>
+        <div
+          class="max-w-screen-xl mx-auto pb-3 text-[10px] flex justify-center gap-2"
+        >
+          <i class="fa-solid fa-circle green"></i>
+          <i class="fa-solid fa-circle text-[#81C784]"></i>
+          <i class="fa-solid fa-circle text-[#A5D6A7]"></i>
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
