Client part done

--- a/index.html
+++ b/index.html
@@ -111,12 +111,38 @@
           class="max-w-screen-xl mx-auto pb-3 text-[10px] flex justify-center gap-2"
         >
           <i class="fa-solid fa-circle green"></i>
-          <i class="fa-solid fa-circle text-[#81C784]"></i>
-          <i class="fa-solid fa-circle text-[#A5D6A7]"></i>
+          <i class="fa-solid fa-circle text-[#81C784] hover:text-[#4caf4f]"></i>
+          <i class="fa-solid fa-circle text-[#A5D6A7] hover:text-[#4caf4f]"></i>
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <!-- Client Part -->
+      <section class="max-w-screen-xl mx-auto mt-7">
+        <!-- Text part -->
+        <div class="flex flex-col items-center">
+          <h1 class="d_grey text-[1.625rem] font-semibold leading-7 mb-4">
+            Our Clients
+          </h1>
+          <p class="p-color">
+            We have been working with some Fortune 500+ clients
+          </p>
+        </div>
+        <!-- Client Image -->
+        <div class="flex justify-between mt-8 mb-8">
+          <a href="#"><img src="images/client-1.png" alt="client" /></a>
+          <a href="#"><img src="images/client-2.png" alt="client" /></a>
+          <a href="#"><img src="images/client-3.png" alt="client" /></a>
+          <a href="#"><img src="images/client-4.png" alt="client" /></a>
+          <a href="#"><img src="images/client-5.png" alt="client" /></a>
+          <a href="#"><img src="images/client-6.png" alt="client" /></a>
+          <a href="#"><img src="images/client-7.png" alt="client" /></a>
+        </div>
+      </section>
+
+      <!-- Community Part -->
+      <section class="max-w-screen-xl mx-auto"></section>
+    </main>
     <footer></footer>
   </body>
 </html>
