Community, pixelGrade & pretty similar like pixelGrade  part done

--- a/index.html
+++ b/index.html
@@ -141,7 +141,134 @@
       </section>
 
       <!-- Community Part -->
-      <section class="max-w-screen-xl mx-auto"></section>
+      <section class="max-w-screen-xl mx-auto mb-7">
+        <!-- Heading div -->
+        <div class="flex flex-col items-center text-center">
+          <h1
+            class="d_grey text-[1.5625rem] leading-[1.875rem] font-semibold mb-2"
+          >
+            Manage your entire community<br />in a single system
+          </h1>
+          <p class="p-color text-xs">Who is Nextcent suitable for?</p>
+        </div>
+        <!-- Parent Card div-->
+        <div class="flex justify-between">
+          <!-- 1 -->
+          <div
+            class="flex flex-col items-center text-center max-w-[15rem] py-4 px-6"
+          >
+            <img class="mb-2" src="images/card-icon-1.png" alt="icon" />
+            <h2
+              class="d_grey text-[1.1875rem] leading-[1.5625rem] font-bold mb-2"
+            >
+              Membership Organisations
+            </h2>
+            <p class="p-color text-[.625rem]">
+              Our membership management software provides full automation of
+              membership renewals and payments
+            </p>
+          </div>
+          <!-- 2 -->
+          <div
+            class="flex flex-col items-center text-center max-w-[15rem] py-4 px-6"
+          >
+            <img class="mb-2" src="images/card-icon-2.png" alt="icon" />
+            <h2
+              class="d_grey text-[1.1875rem] leading-[1.5625rem] font-bold mb-2"
+            >
+              National Associations
+            </h2>
+            <p class="p-color text-[.625rem]">
+              Our membership management software provides full automation of
+              membership renewals and payments
+            </p>
+          </div>
+          <!-- 3 -->
+          <div
+            class="flex flex-col items-center text-center max-w-[15rem] py-4 px-6"
+          >
+            <img class="mb-2" src="images/card-icon-3.png" alt="icon" />
+            <h2
+              class="d_grey text-[1.1875rem] leading-[1.5625rem] font-bold mb-2"
+            >
+              Clubs And<br />Groups
+            </h2>
+            <p class="p-color text-[.625rem]">
+              Our membership management software provides full automation of
+              membership renewals and payments
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Pixelgrade section -->
+
+      <section class="max-w-screen-xl mx-auto">
+        <!-- Main div -->
+        <div class="flex items-center justify-between">
+          <!-- Image div -->
+          <div class="w-full">
+            <img src="images/experience-img.png" alt="experience" />
+          </div>
+          <!-- text div -->
+          <div>
+            <h2
+              class="d_grey text-[1.5625rem] leading-[1.875rem] font-semibold mb-3"
+            >
+              The unseen of spending three<br />years at Pixelgrade
+            </h2>
+            <p class="p-color text-[.75rem] mb-6 text-justify">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit
+              amet justo ipsum. Sed accumsan quam vitae est varius fringilla.
+              Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
+              tristique iaculis. Nullam pulvinar sit amet risus pretium auctor.
+              Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec
+              elementum pulvinar odio.
+            </p>
+            <button
+              class="bg-[#4caf4f] hover:bg-[#348b35] text-white py-3 px-7 rounded-[3px] font-medium"
+            >
+              Learn More
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <!-- Similar like pixelGrade -->
+
+      <section class="max-w-screen-xl mx-auto">
+        <!-- Main div -->
+        <div class="flex items-center justify-between">
+          <!-- Image div -->
+          <div class="w-full">
+            <img src="images/pana.png" alt="experience" />
+          </div>
+          <!-- text div -->
+          <div>
+            <h2
+              class="d_grey text-[1.5625rem] leading-[1.875rem] font-semibold mb-3"
+            >
+              How to design your site footer like<br />we did
+            </h2>
+            <p class="p-color text-[.75rem] mb-6 text-justify">
+              Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor,
+              augue nec tincidunt molestie, massa nunc varius arcu, at
+              scelerisque elit erat a magna. Donec quis erat at libero ultrices
+              mollis. In hac habitasse platea dictumst. Vivamus vehicula leo
+              dui, at porta nisi facilisis finibus. In euismod augue vitae nisi
+              ultricies, non aliquet urna tincidunt. Integer in nisi eget nulla
+              commodo faucibus efficitur quis massa. Praesent felis est, finibus
+              et nisi ac, hendrerit venenatis libero. Donec consectetur faucibus
+              ipsum id gravida.
+            </p>
+            <button
+              class="bg-[#4caf4f] hover:bg-[#348b35] text-white py-3 px-7 rounded-[3px] font-medium"
+            >
+              Learn More
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
