Unsplash part done

--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
         </div>
       </section>
 
-      <!-- Pixelgrade section -->
-
+      <!-- Pixelgrade part -->
       <section class="max-w-screen-xl mx-auto">
         <!-- Main div -->
         <div class="flex items-center justify-between">
@@ -230,6 +229,84 @@
             >
               Learn More
             </button>
+          </div>
+        </div>
+      </section>
+
+      <!-- Unsplash part -->
+      <section class="silver pt-10 pb-10">
+        <!-- Parent div -->
+        <div class="flex items-center max-w-screen-xl mx-auto justify-between">
+          <!-- Right content -->
+          <div>
+            <h2 class="leading-[1.875rem] font-semibold text-[1.5625rem] mb-2">
+              <span class="d_grey">Helping a local</span><br /><span
+                class="green"
+                >business reinvent itself</span
+              >
+            </h2>
+            <p class="text-[12px]">
+              We reached here with our hard work and dedication
+            </p>
+          </div>
+          <!-- Left content -->
+          <div class="grid grid-cols-2 gap-10">
+            <!-- 1 -->
+            <div class="flex items-center gap-2">
+              <!-- Icon div -->
+              <div>
+                <img src="images/Icon-1.png" alt="" />
+              </div>
+              <!-- Value & P tag -->
+              <div>
+                <h1 class="d_grey text-[1.25rem] font-bold leading-[1.5625rem]">
+                  2,245,341
+                </h1>
+                <p class="p-color text-xs">Members</p>
+              </div>
+            </div>
+            <!-- 2 -->
+            <div class="flex items-center gap-2">
+              <!-- Icon div -->
+              <div>
+                <img src="images/Icon-2.png" alt="" />
+              </div>
+              <!-- Value & P tag -->
+              <div>
+                <h1 class="d_grey text-[1.25rem] font-bold leading-[1.5625rem]">
+                  46,328
+                </h1>
+                <p class="p-color text-xs">Clubs</p>
+              </div>
+            </div>
+            <!-- 3 -->
+            <div class="flex items-center gap-2">
+              <!-- Icon div -->
+              <div>
+                <img src="images/Icon-3.png" alt="" />
+              </div>
+              <!-- Value & P tag -->
+              <div>
+                <h1 class="d_grey text-[1.25rem] font-bold leading-[1.5625rem]">
+                  828,867
+                </h1>
+                <p class="p-color text-xs">Event Bookings</p>
+              </div>
+            </div>
+            <!-- 4 -->
+            <div class="flex items-center gap-2">
+              <!-- Icon div -->
+              <div>
+                <img src="images/Icon-4.png" alt="" />
+              </div>
+              <!-- Value & P tag -->
+              <div>
+                <h1 class="d_grey text-[1.25rem] font-bold leading-[1.5625rem]">
+                  1,926,436
+                </h1>
+                <p class="p-color text-xs">Payments</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
