--- a/index.html
+++ b/index.html
@@ -312,10 +312,9 @@
       </section>
 
       <!-- Similar like pixelGrade -->
-
       <section class="max-w-screen-xl mx-auto">
         <!-- Main div -->
-        <div class="flex items-center justify-between">
+        <div class="flex items-center justify-between mb-9">
           <!-- Image div -->
           <div class="w-full">
             <img src="images/pana.png" alt="experience" />
@@ -346,6 +345,54 @@
           </div>
         </div>
       </section>
+
+      <!-- Meet Customer part -->
+      <section class="silver pt-4 mb-8">
+        <div class="max-w-screen-xl mx-auto flex items-center justify-between">
+          <!-- Image div -->
+          <div class="w-full">
+            <img src="images/unsplash.png" alt="experience" />
+          </div>
+          <!-- text div -->
+          <div>
+            <p
+              class="p-color text-[.75rem] mb-6 text-justify leading-[1.0625rem]"
+            >
+              Maecenas dignissim justo eget nulla rutrum molestie. Maecenas
+              lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu
+              enim metus. Vivamus sed libero ornare, tristique quam in, gravida
+              enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet
+              elit at ligula molestie, nec molestie mi blandit. Suspendisse
+              cursus tellus sed augue ultrices, quis tristique nulla sodales.
+              Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse
+              potenti. Quisque malesuada enim sapien, vitae placerat ante
+              feugiat eget. Quisque vulputate odio neque, eget efficitur libero
+              condimentum id. Curabitur id nibh id sem dignissim finibus ac sit
+              amet magna.
+            </p>
+            <h3 class="green font-semibold">Tim Smith</h3>
+            <h4 class="text-[#89939E] text-xs">
+              British Dragon Boat Racing Association
+            </h4>
+            <div class="flex justify-between mt-8 mb-8">
+              <a href="#"
+                ><img src="images/color-client-1.png" alt="client"
+              /></a>
+              <a href="#"><img src="images/client-2.png" alt="client" /></a>
+              <a href="#"><img src="images/client-3.png" alt="client" /></a>
+              <a href="#"><img src="images/client-4.png" alt="client" /></a>
+              <a href="#"><img src="images/client-5.png" alt="client" /></a>
+              <a href="#"><img src="images/client-6.png" alt="client" /></a>
+              <button class="green font-semibold leading-5 text-[14px]">
+                Meet all customers <i class="fa-solid fa-arrow-right ml-1"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- New Marketing Part -->
+      <section></section>
     </main>
     <footer></footer>
   </body>
