Marketing part done

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
       .p-color {
         color: #717171;
       }
+      .silver {
+        color: #f5f7fa;
+      }
     </style>
   </head>
   <body class="inter">
@@ -392,7 +395,85 @@
       </section>
 
       <!-- New Marketing Part -->
-      <section></section>
+      <section class="max-w-screen-xl mx-auto">
+        <!-- Heading text -->
+        <div class="flex flex-col items-center">
+          <h2
+            class="d_grey text-[1.625rem] font-semibold leading-7 text-center mb-2"
+          >
+            Caring is the new marketing
+          </h2>
+          <p
+            class="p-color leading-[1rem] text-xs max-w-[27.5rem] text-center mb-2"
+          >
+            The Nextcent blog is the best place to read about the latest
+            membership insights, trends and more. See who's joining the
+            community, read about how our community are increasing their
+            membership income and lot's more.​
+          </p>
+        </div>
+        <!-- Main Cards -->
+        <div class="grid grid-cols-3 mt-3">
+          <!-- 1 -->
+          <div class="flex flex-col items-center">
+            <div>
+              <img src="images/market-img-1.png" alt="" />
+            </div>
+            <!-- Silver div -->
+            <div
+              class="silver max-w-[13.75rem] p-3 flex flex-col items-center rounded-lg shadow-lg -translate-y-1/2 bottom-0"
+            >
+              <p
+                class="p-color text-[.875rem] font-semibold leading-[1.1875rem] text-center mb-2"
+              >
+                Creating Streamlined Safeguarding Processes with OneRen
+              </p>
+              <button class="green text-[.875rem]">
+                Read more <i class="fa-solid fa-arrow-right ml-1"></i>
+              </button>
+            </div>
+          </div>
+          <!-- 2 -->
+          <div class="flex flex-col items-center">
+            <div>
+              <img src="images/market-img-2.png" alt="" />
+            </div>
+            <!-- Silver div -->
+            <div
+              class="silver max-w-[13.75rem] p-3 flex flex-col items-center rounded-lg -translate-y-1/2 bottom-0 shadow-lg"
+            >
+              <p
+                class="p-color text-[.875rem] font-semibold leading-[1.1875rem] text-center mb-2"
+              >
+                What are your safeguarding responsibilities and how can you
+                manage them?
+              </p>
+              <button class="green text-[.875rem]">
+                Read more <i class="fa-solid fa-arrow-right ml-1"></i>
+              </button>
+            </div>
+          </div>
+          <!-- 3 -->
+          <div class="flex flex-col items-center">
+            <div>
+              <img src="images/market-img-3.png" alt="" />
+            </div>
+            <!-- Silver div -->
+            <div
+              class="silver max-w-[13.75rem] p-3 flex flex-col items-center rounded-lg -translate-y-1/2 bottom-0 shadow-lg"
+            >
+              <p
+                class="p-color text-[.875rem] font-semibold leading-[1.1875rem] text-center mb-2"
+              >
+                Revamping the Membership Model with Triathlon Australia
+              </p>
+              <button class="green text-[.875rem]">
+                Read more <i class="fa-solid fa-arrow-right ml-1"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
