--- a/index.html
+++ b/index.html
@@ -474,6 +474,22 @@
           </div>
         </div>
       </section>
+
+      <!-- Demo Part -->
+      <section class="silver pb-6">
+        <div class="flex flex-col items-center">
+          <h1
+            class="text-[#263238] text-[2.8125rem] font-semibold leadinf-[3.3125rem] mb-6 p-4 text-center"
+          >
+            Ready to see our <br />product in action?
+          </h1>
+          <button
+            class="bg-[#4caf4f] hover:bg-[#348b35] text-white py-3 px-7 rounded-[3px] font-medium"
+          >
+            Get a Demo <i class="fa-solid fa-arrow-right ml-1"></i>
+          </button>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
