Footer part's work still ongoing

--- a/index.html
+++ b/index.html
@@ -491,6 +491,64 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="bg-[#263238] text-white p-11">
+      <!-- Main div -->
+      <div class="max-w-screen-xl mx-auto flex justify-between">
+        <!-- 1 col -->
+        <div>
+          <div class="flex gap-3 mb-7">
+            <img class="h-[1.875rem]" src="images/footer-icon.svg" alt="logo" />
+            <h1 class="text-3xl font-bold">Nexcent</h1>
+          </div>
+          <p class="mb-2 text-xs">Copyright © 2025 Landify UI Kit.</p>
+          <p class="mb-7 text-xs">All rights reserved</p>
+          <ul class="flex gap-3">
+            <li>
+              <a href="#"><img src="images/insta.png" alt="visit site" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/web.png" alt="visit site" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/twi.png" alt="visit site" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/yt.png" alt="visit site" /></a>
+            </li>
+          </ul>
+        </div>
+        <!-- 2 col -->
+        <div class="flex justify-between gap-40">
+          <!-- Company part -->
+          <div>
+            <h1 class="font-semibold leading-5 text-[16px] mb-2">Company</h1>
+            <ul class="text-[.875rem] text-[silver] space-y-1">
+              <li><a href="#">About us</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact us</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Testimonials</a></li>
+            </ul>
+          </div>
+          <!-- Support part -->
+          <div>
+            <h1 class="font-semibold leading-5 text-[16px] mb-2">Support</h1>
+            <ul class="text-[.875rem] text-[silver] space-y-1">
+              <li><a href="#">Help center</a></li>
+              <li><a href="#">Terms of service</a></li>
+              <li><a href="#">Legal</a></li>
+              <li><a href="#">Privacy policy</a></li>
+              <li><a href="#">Status</a></li>
+            </ul>
+          </div>
+          <!-- Stay up to date -->
+          <div>
+            <h1 class="font-semibold leading-5 text-[16px] mb-2">
+              Stay up to date
+            </h1>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
