--- a/index.html
+++ b/index.html
@@ -542,10 +542,22 @@
             </ul>
           </div>
           <!-- Stay up to date -->
-          <div>
-            <h1 class="font-semibold leading-5 text-[16px] mb-2">
+          <div class="flex flex-col">
+            <h1 class="font-semibold leading-5 text-[16px] mb-3">
               Stay up to date
             </h1>
+            <div class="flex">
+              <input
+                class="w-[12.5rem] rounded-tl-md rounded-bl-md py-2 px-2 placeholder:text-[10px] bg-gray-600 text-[10px] text-white focus:outline-none"
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Your email address"
+              />
+              <button class="bg-gray-600 rounded-tr-md rounded-br-md pr-2">
+                <i class="fa-regular fa-paper-plane"></i>
+              </button>
+            </div>
           </div>
         </div>
       </div>
