Made responsive Community & Pixelgrade part

--- a/index.html
+++ b/index.html
@@ -172,21 +172,21 @@
       </section>
 
       <!-- Community Part -->
-      <section class="max-w-screen-xl mx-auto mb-7 hidden">
+      <section class="max-w-screen-xl mx-auto mb-7 px-2 lg:px-0">
         <!-- Heading div -->
         <div class="flex flex-col items-center text-center">
           <h1
-            class="d_grey text-[1.5625rem] leading-[1.875rem] font-semibold mb-2"
+            class="d_grey text-[1.5625rem] leading-[1.875rem] font-semibold mb-2 mt-3 lg:mt-0"
           >
             Manage your entire community<br />in a single system
           </h1>
           <p class="p-color text-xs">Who is Nextcent suitable for?</p>
         </div>
         <!-- Parent Card div-->
-        <div class="flex justify-between">
+        <div class="flex lg:justify-between flex-col lg:flex-row items-center">
           <!-- 1 -->
           <div
-            class="flex flex-col items-center text-center max-w-[15rem] py-4 px-6"
+            class="flex flex-col items-center text-center lg:max-w-[15rem] py-4 px-6"
           >
             <img class="mb-2" src="images/card-icon-1.png" alt="icon" />
             <h2
@@ -194,14 +194,14 @@
             >
               Membership Organisations
             </h2>
-            <p class="p-color text-[.625rem]">
+            <p class="p-color lg:text-[.625rem] text-xs">
               Our membership management software provides full automation of
               membership renewals and payments
             </p>
           </div>
           <!-- 2 -->
           <div
-            class="flex flex-col items-center text-center max-w-[15rem] py-4 px-6"
+            class="flex flex-col items-center text-center lg:max-w-[15rem] py-4 px-6"
           >
             <img class="mb-2" src="images/card-icon-2.png" alt="icon" />
             <h2
@@ -209,22 +209,23 @@
             >
               National Associations
             </h2>
-            <p class="p-color text-[.625rem]">
+            <p class="p-color lg:text-[.625rem] text-xs">
               Our membership management software provides full automation of
               membership renewals and payments
             </p>
           </div>
           <!-- 3 -->
           <div
-            class="flex flex-col items-center text-center max-w-[15rem] py-4 px-6"
+            class="flex flex-col items-center text-center lg:max-w-[15rem] py-4 px-6"
           >
             <img class="mb-2" src="images/card-icon-3.png" alt="icon" />
             <h2
               class="d_grey text-[1.1875rem] leading-[1.5625rem] font-bold mb-2"
             >
-              Clubs And<br />Groups
+              Clubs And<br class="lg:block hidden" />
+              Groups
             </h2>
-            <p class="p-color text-[.625rem]">
+            <p class="p-color lg:text-[.625rem] text-xs">
               Our membership management software provides full automation of
               membership renewals and payments
             </p>
@@ -233,21 +234,23 @@
       </section>
 
       <!-- Pixelgrade part -->
-      <section class="max-w-screen-xl mx-auto hidden">
+      <section class="max-w-screen-xl mx-auto px-2 lg:px-0">
         <!-- Main div -->
-        <div class="flex items-center justify-between">
+        <div class="lg:flex items-center justify-between">
           <!-- Image div -->
-          <div class="w-full">
+          <div class="w-full flex justify-center lg:block">
             <img src="images/experience-img.png" alt="experience" />
           </div>
           <!-- text div -->
-          <div>
+          <div class="flex flex-col items-center lg:block">
             <h2
-              class="d_grey text-[1.5625rem] leading-[1.875rem] font-semibold mb-3"
+              class="d_grey text-[1.5625rem] leading-[1.875rem] font-semibold mb-3 text-center lg:text-start"
             >
               The unseen of spending three<br />years at Pixelgrade
             </h2>
-            <p class="p-color text-[.75rem] mb-6 text-justify">
+            <p
+              class="p-color text-[.75rem] mb-6 text-justify w-[85%] lg:w-full"
+            >
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit
               amet justo ipsum. Sed accumsan quam vitae est varius fringilla.
               Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
