Unsplash part made responsive

--- a/index.html
+++ b/index.html
@@ -268,12 +268,16 @@
       </section>
 
       <!-- Unsplash part -->
-      <section class="silver pt-10 pb-10 hidden">
+      <section class="silver pt-10 pb-10">
         <!-- Parent div -->
-        <div class="flex items-center max-w-screen-xl mx-auto justify-between">
+        <div
+          class="lg:flex items-center max-w-screen-xl mx-auto justify-between px-2 lg:px-0"
+        >
           <!-- Right content -->
           <div>
-            <h2 class="leading-[1.875rem] font-semibold text-[1.5625rem] mb-2">
+            <h2
+              class="leading-[1.875rem] font-semibold text-[1.5625rem] mb-2 text-center lg:text-left"
+            >
               <span class="d_grey">Helping a local</span><br /><span
                 class="green"
                 >business reinvent itself</span
@@ -284,9 +288,11 @@
             </p>
           </div>
           <!-- Left content -->
-          <div class="grid grid-cols-2 gap-10">
+          <div class="grid grid-cols-2 lg:gap-10 gap-4">
             <!-- 1 -->
-            <div class="flex items-center gap-2">
+            <div
+              class="flex items-center gap-2 justify-center lg:justify-normal"
+            >
               <!-- Icon div -->
               <div>
                 <img src="images/Icon-1.png" alt="" />
@@ -300,7 +306,9 @@
               </div>
             </div>
             <!-- 2 -->
-            <div class="flex items-center gap-2">
+            <div
+              class="flex items-center gap-2 justify-center lg:justify-normal"
+            >
               <!-- Icon div -->
               <div>
                 <img src="images/Icon-2.png" alt="" />
@@ -314,7 +322,9 @@
               </div>
             </div>
             <!-- 3 -->
-            <div class="flex items-center gap-2">
+            <div
+              class="flex items-center gap-2 justify-center lg:justify-normal"
+            >
               <!-- Icon div -->
               <div>
                 <img src="images/Icon-3.png" alt="" />
@@ -328,7 +338,9 @@
               </div>
             </div>
             <!-- 4 -->
-            <div class="flex items-center gap-2">
+            <div
+              class="flex items-center gap-2 justify-center lg:justify-normal"
+            >
               <!-- Icon div -->
               <div>
                 <img src="images/Icon-4.png" alt="" />
