Similar like pixelGrade made responsive

--- a/index.html
+++ b/index.html
@@ -358,21 +358,23 @@
       </section>
 
       <!-- Similar like pixelGrade -->
-      <section class="max-w-screen-xl mx-auto hidden">
+      <section class="max-w-screen-xl mx-auto px-2 lg:px-0">
         <!-- Main div -->
-        <div class="flex items-center justify-between mb-9">
+        <div class="lg:flex items-center justify-between mb-9">
           <!-- Image div -->
-          <div class="w-full">
+          <div class="w-full flex justify-center lg:block">
             <img src="images/pana.png" alt="experience" />
           </div>
           <!-- text div -->
-          <div>
+          <div class="flex flex-col items-center lg:block">
             <h2
-              class="d_grey text-[1.5625rem] leading-[1.875rem] font-semibold mb-3"
+              class="d_grey text-[1.5625rem] leading-[1.875rem] font-semibold mb-3 text-center lg:text-start"
             >
               How to design your site footer like<br />we did
             </h2>
-            <p class="p-color text-[.75rem] mb-6 text-justify">
+            <p
+              class="p-color text-[.75rem] mb-6 text-justify w-[87%] lg:w-full"
+            >
               Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor,
               augue nec tincidunt molestie, massa nunc varius arcu, at
               scelerisque elit erat a magna. Donec quis erat at libero ultrices
